change images for readme to reflect changes on page, fix issue with about image not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,7 @@ h2 {
 }
 
 .about-left-img {
+    height: 20%;
     background: url(../images/fairing-release.webp) no-repeat center center;
     background-size: cover;
 }
@@ -295,14 +296,15 @@ footer iframe {
         margin-top: 20px;
     }
 
-
     .nav-list {
-        float: left;
         top: 0;
-        height: 5%;
+        left: 0;
+        height: 4%;
         width: 100%;
         background: #3c3c3c;
         position: fixed;
+        font-size: 130%;
+        overflow-y: auto;
     }
 
     .nav-list li {
@@ -398,7 +400,7 @@ footer iframe {
     section,
     footer {
         width: 98%;
-        height: 720px;
+        height: 1000px;
         margin: 10px auto;
     }
 
